crates/deadline-cli/tests/cli/snapshots/cli__bundle_hooks__bundle_submit_hooks_confirmation_prompt.snap
---
source: crates/deadline-cli/tests/cli/bundle_hooks.rs
info:
  program: deadline
  args:
    - bundle
    - submit
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpeiJmVt/hooks_prompt
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:65023"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:65023"
    AWS_ENDPOINT_URL_S3: "http://localhost:65023"
    AWS_ENDPOINT_URL_STS: "http://localhost:65023"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpeiJmVt/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpeiJmVt
---
success: true
exit_code: 0
----- stdout -----
This job bundle contains submission hooks that will execute on your machine:

  Pre-submission hooks:
    [1] sh -c exit 0

  Bundle: [TEMP_PATH]
Do you want to run these hooks?
Submitting to Queue: Test Queue

Running pre-submission hook [1]: sh -c exit 0
Hashing Attachments
Uploading Attachments
Waiting for Job to be created...
Submitted job bundle:
   [TEMP_PATH]
Job created successfully
job-0123456789abcdef0123456789abcdef

----- stderr -----
